--- a/policy.html
+++ b/policy.html
@@ -6,15 +6,15 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.CaSpy0iN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B5eBE9J9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BkgYzzbQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D64wKEEr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C73Jpd6P.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.D9Xtyapk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DMRgtiqd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.j0t0h764.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DgvyH4Gf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BQBC9Qdp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.sJvwxovP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C8FMZ1oA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Iz59JaCk.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/5.Cu-w-T7S.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -22,7 +22,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ohntg4 = {
+					__sveltekit_r41fef = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -32,8 +32,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B5eBE9J9.js"),
-						import("./_app/immutable/entry/app.DMRgtiqd.js")
+						import("./_app/immutable/entry/start.D64wKEEr.js"),
+						import("./_app/immutable/entry/app.DgvyH4Gf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
