--- a/about.html
+++ b/about.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.CaSpy0iN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D64wKEEr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C73Jpd6P.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C24W8ZKy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DP_bLaF0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.j0t0h764.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DgvyH4Gf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.Bt-XJBaE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C0Ht94d0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C8FMZ1oA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Iz59JaCk.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.FW3lEfSj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D1JkouIM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DZo_HiZC.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.ChZB-E8W.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-j9fyah"><a href="."><img class="w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div>  <div class="flex absolute w-full"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-y9v63d"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-s4ddkx"><a href="./contact">Contact</a></li></ul></div> </div></div></div>  <main class="min-h-screen"><div class="flex items-center justify-center bg-black" data-svelte-h="svelte-cf0op6"><img class="object-cover blur-md w-full h-[45vh]" src="./images/partner.jpg" alt=""> <h1 class="absolute text-white top-1/4 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center text-6xl font-bold">Ihr neuer Partner!</h1> <p class="absolute text-gray-300 mt-8 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">Moderne Software welche ihr Unternehmen zu repräsentiert</p> <a href="./contact" class="absolute mt-36 btn bg-green-400">Kontaktieren sie uns!</a></div> <div class="flex text-white flex-col-reverse items-center pt-10 bg-black" data-svelte-h="svelte-5gimyw"><div class="hero-content flex-col w-[40%] h-[35rem]"><h1 class="text-5xl text-center">Wer sind wir?</h1> <p class="break-word md:break-all mt-8">Wir sind ein junges Unternehmen, welches sich ein Ziel gesetzt hat Software auf einen neuen
@@ -28,7 +28,7 @@
 			
 			<script>
 				{
-					__sveltekit_r41fef = {
+					__sveltekit_ztpbui = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -38,8 +38,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D64wKEEr.js"),
-						import("./_app/immutable/entry/app.DgvyH4Gf.js")
+						import("./_app/immutable/entry/start.C24W8ZKy.js"),
+						import("./_app/immutable/entry/app.C0Ht94d0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
