--- a/policy.html
+++ b/policy.html
@@ -6,15 +6,15 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.CaSpy0iN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4GGiMK5o.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Di0TLY22.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DElgK5wk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cn2bFofg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.DqwBn3Ag.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CM2eNujp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.Bg9QwpGS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Iivlkkot.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CDND_Jv4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CTzelqOk.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B0kdAq9H.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CD93b3mf.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/5.Cu-w-T7S.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -22,7 +22,7 @@
 			
 			<script>
 				{
-					__sveltekit_qd7fgc = {
+					__sveltekit_55yto7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -32,8 +32,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4GGiMK5o.js"),
-						import("./_app/immutable/entry/app.CM2eNujp.js")
+						import("./_app/immutable/entry/start.DElgK5wk.js"),
+						import("./_app/immutable/entry/app.Iivlkkot.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
