--- a/services.html
+++ b/services.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.CaSpy0iN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C0Vwwc-p.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.6wVXlOxj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CSmClbYB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.8DkDJb5M.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.DDaWJut4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B1jA66sn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.B6N6wSg0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D-DULBp7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DVTOHBbm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CNUic6T_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.x4TkjOog.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DZ_2aDP4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.ChhjVIL8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.Byw-F7Yz.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-j9fyah"><a href="."><img class="w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div>  <div class="flex absolute w-full"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-y9v63d"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-s4ddkx"><a href="./contact">Contact</a></li></ul></div> </div></div></div>  <main class="min-h-screen"><div class="min-h-screen bg-base-200"><div class="flex justify-evenly py-60 mb-80"><div class="flex items-center justify-center"><a href="#websites" data-svelte-h="svelte-e7icxg"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/website.jpg" alt=""></a> <span class="absolute text-center text-white text-2xl font-bold" data-svelte-h="svelte-1i0c23r">Websites</span></div> <div class="flex items-center justify-center"><a href="#desktop" data-svelte-h="svelte-5zb7e7"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/desktop.jpg" alt=""></a> <span class="absolute text-center text-white text-2xl font-bold" data-svelte-h="svelte-18cicrk">Desktop Applications</span></div> <div class="flex items-center justify-center"><a href="#automation" data-svelte-h="svelte-1nwsart"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/automation.jpg" alt=""></a> <span class="absolute text-center text-white text-2xl font-bold" data-svelte-h="svelte-4ux45w">Automation</span></div></div> <div class="bg-black text-white" data-svelte-h="svelte-3gral5"><div class="hero h-[45rem]" id="websites"><div class="hero-content flex-col lg:flex-row-reverse"><img src="./images/website.jpg" class="h-64 max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold">Websites</h1> <p class="py-6">Unser Ziel ist es, Ihnen dabei zu helfen, Ihre Online-Präsenz zu stärken und zu
@@ -35,7 +35,7 @@
 			
 			<script>
 				{
-					__sveltekit_q10goo = {
+					__sveltekit_165no8o = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -45,8 +45,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C0Vwwc-p.js"),
-						import("./_app/immutable/entry/app.B1jA66sn.js")
+						import("./_app/immutable/entry/start.CSmClbYB.js"),
+						import("./_app/immutable/entry/app.D-DULBp7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
