--- a/about.html
+++ b/about.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.ByBxx2OG.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Bm6OtBmp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BRZt2wbb.js">
+		<link href="./_app/immutable/assets/0.x9ghqEkr.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Bb4trR3o.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CuLCTUSv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.B7PkU9BE.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.h2i67QyP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.Db0memNo.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B_nksE-O.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CjKi5fw7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores._1X7_5a9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.CVBFALJm.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CXeVBRVF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DiaAtswX.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.3IPqblhk.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-j9fyah"><a href="."><img class="w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div>  <div class="flex absolute w-full"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-y9v63d"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-s4ddkx"><a href="./contact">Contact</a></li></ul></div> </div></div></div>  <main class="min-h-screen"><div class="relative min-h-[45vh] flex items-center justify-center bg-black" data-svelte-h="svelte-18r3b94"><img class="object-cover blur-md w-full h-[45vh]" src="./images/partner.png" alt=""> <figure class="absolute mx-auto"><h1 class="font-extrabold text-white text-center text-6xl ">Ihr neuer Partner!</h1> <p class="font-bold text-gray-200 text-center">Moderne Software welche ihr Unternehmen repräsentiert</p> <a href="./contact" class="relative left-[28%] mt-10 btn bg-green-400">Kontaktieren sie uns!</a></figure></div> <div class="flex text-white flex-col-reverse items-center pt-10 bg-black" data-svelte-h="svelte-1y4fc7e"><div class="flex-col w-[40%] md:h-[35rem]"><h1 class="text-5xl pt-20 text-center">Wer sind wir?</h1> <p class="break-word md:break-all mt-8">Wir sind ein junges Unternehmen, welches sich ein Ziel gesetzt hat Software auf einen neuen
@@ -28,7 +28,7 @@
 			
 			<script>
 				{
-					__sveltekit_g6j1ku = {
+					__sveltekit_1er06po = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -38,8 +38,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Bm6OtBmp.js"),
-						import("./_app/immutable/entry/app.h2i67QyP.js")
+						import("./_app/immutable/entry/start.Bb4trR3o.js"),
+						import("./_app/immutable/entry/app.B_nksE-O.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
