--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.ByBxx2OG.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.x9ghqEkr.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.BwxPUose.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Bm6OtBmp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BRZt2wbb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Bb4trR3o.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CuLCTUSv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.B7PkU9BE.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.h2i67QyP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.Db0memNo.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B_nksE-O.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CjKi5fw7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores._1X7_5a9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Bu8MLasj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CXeVBRVF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DiaAtswX.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.WKb0axsO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/functions.7WSLLGk3.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_g6j1ku = {
+					__sveltekit_1er06po = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -34,8 +34,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Bm6OtBmp.js"),
-						import("./_app/immutable/entry/app.h2i67QyP.js")
+						import("./_app/immutable/entry/start.Bb4trR3o.js"),
+						import("./_app/immutable/entry/app.B_nksE-O.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
