--- a/services.html
+++ b/services.html
@@ -5,24 +5,24 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.x9ghqEkr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CX_vSwB7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ZWHu_OPK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C48__LxL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.Bl_XbD4O.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BBh8grfh.js">
+		<link href="./_app/immutable/assets/0.DWWC5kSI.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BbsvtwJG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D7pTlZnq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BHDZ3kkz.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.CDa1U5M_.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BzyMW-EX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.D6kgxu3v.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.B3sDKnxy.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.25smde6i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bp6kMyff.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.BdRVUNH7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CaGSb-jg.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cwt14fpX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DTBt0O6w.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.CE6Lrx4f.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-j9fyah"><a href="."><img class="w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div>  <div class="flex absolute w-full"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-y9v63d"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-530bre" data-svelte-h="svelte-s4ddkx"><a href="./contact">Contact</a></li></ul></div> </div></div></div>  <main class="min-h-screen"><div class="min-h-screen bg-base-200"><div class="md:flex justify-evenly py-60 mb-80"><div class="flex items-center justify-center "><a href="#websites" data-svelte-h="svelte-xsmmuu"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/website.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-nvjehk">Websites</span></div> <div class="flex items-center justify-center"><a href="#desktop" data-svelte-h="svelte-1mah567"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/desktop.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-xdhk2b">Desktop Applications</span></div> <div class="flex items-center justify-center"><a href="#automation" data-svelte-h="svelte-1xzzrnt"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/automation.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-1yas7ev">Automation</span></div></div> <div class="bg-black text-white" data-svelte-h="svelte-1sp6dvv"><div class="hero h-[45rem]" id="websites"><div class="hero-content flex-col lg:flex-row-reverse"><img src="./images/website.png" class="h-64 max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold">Websites</h1> <p class="py-6">Unser Ziel ist es, Ihnen dabei zu helfen, Ihre Online-Präsenz zu stärken und zu
+		<div style="display: contents">   <div class="bg-base-100"><div class="relative flex h-16 items-center"> <div data-svelte-h="svelte-kysvzf"><a href="."><img class="w-46 h-44" src="./images/logo_transparent.png" alt=""></a></div> <div class="md:hidden"><button aria-expanded="false" aria-label="toggle menu" class="svelte-u18hxq"><svg viewBox="0 0 100 100" fill="none" stroke="currentColor" stroke-width="5" width="80" class="svelte-u18hxq"><path class="top svelte-u18hxq" d="m 30,33 h 40 c 3.722839,0 7.5,3.126468 7.5,8.578427 0,5.451959 -2.727029,8.421573 -7.5,8.421573 h -20"></path><path class="middle svelte-u18hxq" d="m 30,50 h 40"></path><path class="bottom svelte-u18hxq" d="m 70,67 h -40 c 0,0 -7.5,-0.802118 -7.5,-8.365747 0,-7.563629 7.5,-8.634253 7.5,-8.634253 h 20"></path></svg> </button></div>  <div class="flex absolute w-full max-sm:hidden"><div class="ml-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-1iynw3v"><a href="./">Home</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-1j6q324"><a href="./services">Services</a></li></ul></div> <div class="mr-auto"><ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-6obtgc"><a href="./about">About</a></li></ul> <ul class="menu menu-horizontal px-1"><li class="svelte-a5yo01" data-svelte-h="svelte-vilpy2"><a href="./contact">Contact</a></li></ul></div> </div></div> </div>  <main class="min-h-screen"><div class="min-h-screen bg-base-200"><div class="md:flex justify-evenly py-60 mb-80"><div class="flex items-center justify-center"><a href="#websites" data-svelte-h="svelte-7ijb5g"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/website.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-19gics2">Websites</span></div> <div class="flex items-center justify-center"><a href="#desktop" data-svelte-h="svelte-1mah567"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/desktop.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-xdhk2b">Desktop Applications</span></div> <div class="flex items-center justify-center"><a href="#automation" data-svelte-h="svelte-1xzzrnt"><img class="h-60 w-80 blur-md hover:scale-105" src="./images/automation.png" alt=""></a> <span class="absolute text-center text-2xl font-bold" data-svelte-h="svelte-1yas7ev">Automation</span></div></div> <div class="bg-black text-white" data-svelte-h="svelte-1tp4gmn"><div class="hero h-[45rem]" id="websites"><div class="hero-content flex-col lg:flex-row-reverse"><img src="./images/website.png" class="h-64 max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold">Websites</h1> <p class="py-6">Unser Ziel ist es, Ihnen dabei zu helfen, Ihre Online-Präsenz zu stärken und zu
 						optimieren. Egal, ob Sie eine neue Website von Grund auf erstellen möchten, Ihre
 						bestehende Website überarbeiten oder einzigartige Weblösungen für Ihr Unternehmen
 						entwickeln wollen, wir haben die richtigen Tools und Experten, um Ihre Vision in die
-						Realität umzusetzen.</p></div></div></div> <div class="hero h-[45rem]" id="desktop"><div class="hero-content flex-col lg:flex-row"><img src="./images/desktop.png" class="h-64 max-sm:w-[90%] max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold ">Desktop Applications</h1> <p class="py-6 ">Selbstverständlich bieten wir Ihnen eine umfassende Palette von Dienstleistungen im
+						Realität umzusetzen.</p></div></div></div> <div class="hero h-[45rem]" id="desktop"><div class="hero-content flex-col lg:flex-row"><img src="./images/desktop.png" class="h-64 max-sm:w-[90%] max-w-sm rounded-lg shadow-2xl"> <div><h1 class="text-5xl font-bold">Desktop Applications</h1> <p class="py-6">Selbstverständlich bieten wir Ihnen eine umfassende Palette von Dienstleistungen im
 						Bereich der Desktop-Anwendungsentwicklung an. Unser Ziel ist es, Ihnen dabei zu helfen,
 						maßgeschneiderte Softwarelösungen zu entwickeln, die Ihre Geschäftsprozesse optimieren
 						und Ihre Ziele erreichen. Egal, ob Sie eine spezielle Hardware-Anwendung, eine
@@ -35,7 +35,7 @@
 			
 			<script>
 				{
-					__sveltekit_wev2ba = {
+					__sveltekit_1wzqt0c = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/emeraldbuisness"
 					};
@@ -45,8 +45,8 @@
 					const data = [{"type":"data","data":null,"uses":{}},{"type":"data","data":null,"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CX_vSwB7.js"),
-						import("./_app/immutable/entry/app.BBh8grfh.js")
+						import("./_app/immutable/entry/start.BbsvtwJG.js"),
+						import("./_app/immutable/entry/app.BzyMW-EX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
